--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 anteriormente mencionado:
             </p>
             <img src="./img/Nagato.jpg" width="900" height="600">
+            <p>hola soy sarai</p>
         </div>
     </div>
     
