--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </p>
             <img src="./img/Nagato.jpg" width="900" height="600">
             <p>hola soy sarai</p>
+            <p>Bienvenido a los pollos hermanos(gael)</p>
         </div>
     </div>
     
