--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <img src="./img/Nagato.jpg" width="900" height="600">
             <p>hola soy sarai</p>
             <p>Bienvenido a los pollos hermanos(gael)</p>
+            <p>Im Gustavo and you can call me Gus (Orlando)</p>
         </div>
     </div>
     
